Fix data processing Docker builds